--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,11 @@ plugins {
 android {
     compileSdk 32
 
+    buildFeatures {
+        dataBinding true
+        viewBinding true
+    }
+
     defaultConfig {
         applicationId "udacity.fwd.project1solution"
         minSdk 21
@@ -47,6 +52,9 @@ dependencies {
     implementation("androidx.navigation:navigation-runtime-ktx:2.5.1")
     implementation("androidx.navigation:navigation-fragment-ktx:2.5.1")
     implementation("androidx.navigation:navigation-ui-ktx:2.5.1")
+    implementation 'androidx.annotation:annotation:1.2.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
 
 
     testImplementation 'junit:junit:4.13.2'
